<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.view.pkg.PackageScanningActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorToolbar"
            android:elevation="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_back_red">

            <TextView
                android:id="@+id/txtToolbar"
                style="@style/ToolbarText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scanning" />
        </androidx.appcompat.widget.Toolbar>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/btnLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <TextView
                style="@style/ToolbarText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pkg_code"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/txtPackageCode"
                style="@style/ToolbarText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/secondaryFontColor"
                android:textSize="18sp"/>


            <TextView
                style="@style/ToolbarText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/pkging_item"
                android:textSize="20sp"/>

            <Spinner
                android:id="@+id/spnPkgItem"
                style="@style/ToolbarText"
                android:layout_width="match_parent"
                android:paddingTop="3dp"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textSize="18sp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:visibility="gone"
                android:layout_marginLeft="10dp"
                android:background="@android:color/darker_gray" />


            <TextView
                style="@style/ToolbarText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/tag_code"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/txtTagCode"
                style="@style/ToolbarText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/secondaryFontColor"
                android:textSize="18sp"/>


            <GridView
                android:id="@+id/gd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:numColumns="2"
                tools:listitem="@layout/rfid_row"/>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_horizontal"

            app:layout_constraintBottom_toBottomOf="parent">


            <Button
                android:id="@+id/btnSubmit"
                style="@style/Button.Cancel"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_margin="12dp"
                android:text="@string/btn_submit" />

            <Button
                android:id="@+id/btnClearScreen"
                style="@style/Button.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="12dp"
                android:text="@string/btn_clear" />
        </LinearLayout>

        <androidx.core.widget.ContentLoadingProgressBar
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="50dp"
            android:visibility="gone"
            android:layout_height="50dp"
            android:layout_centerInParent="true" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>