<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.view.scanPackage.PackageScanningActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorToolbar"
            android:elevation="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_back_red">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtToolbar"
                style="@style/ToolbarText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scan_tag" />
        </androidx.appcompat.widget.Toolbar>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@id/btnLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">
            <androidx.appcompat.widget.AppCompatTextView
                style="@style/ToolbarText"
                android:id="@+id/txtScanCount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/pkg_code"
                android:textSize="180sp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/btnLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_horizontal"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSubmit"
                style="@style/Button.Cancel"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="12dp"
                android:text="@string/btn_submit" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCancel"
                style="@style/Button.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:text="@string/btn_clear" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.core.widget.ContentLoadingProgressBar
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="50dp"
            android:visibility="gone"
            android:layout_height="50dp"
            android:layout_centerInParent="true" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>